Change: 内容を追加

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dopetrope by HTML5 UP</title>
+		<title>Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -21,7 +21,7 @@
 					<div id="header">
 
 						<!-- Logo -->
-							<h1><a href="index.html">Dopetrope</a></h1>
+							<h1><a href="index.html">tomofumi-maki.github.io</a></h1>
 
 						<!-- Nav -->
 							<nav id="nav">
@@ -55,8 +55,8 @@
 						<!-- Banner -->
 							<section id="banner">
 								<header>
-									<h2>Howdy. This is Dopetrope.</h2>
-									<p>A responsive template by HTML5 UP</p>
+									<h2>Tomofumi MAKI</h2>
+									<p>Portfolio</p>
 								</header>
 							</section>
 
@@ -67,27 +67,27 @@
 										<section class="first">
 											<i class="icon featured fa-cog"></i>
 											<header>
-												<h2>Ipsum consequat</h2>
+												<h2>Android</h2>
 											</header>
-											<p>Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p>
+											<!--<p>Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p> -->
 										</section>
 									</div>
 									<div class="4u 12u(mobile)">
 										<section class="middle">
 											<i class="icon featured alt fa-flash"></i>
 											<header>
-												<h2>Magna etiam dolor</h2>
+												<h2>Embedded System</h2>
 											</header>
-											<p>Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p>
+											<!--<p>Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p> -->
 										</section>
 									</div>
 									<div class="4u 12u(mobile)">
 										<section class="last">
 											<i class="icon featured alt2 fa-star"></i>
 											<header>
-												<h2>Tempus adipiscing</h2>
+												<h2>VR?</h2>
 											</header>
-											<p>Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p>
+											<p>これから始めるかもしれん。</p>
 										</section>
 									</div>
 								</div>
@@ -280,23 +280,6 @@
 									</ul>
 								</section>
 							</div>
-							<div class="4u 12u(mobile)">
-								<section>
-									<header>
-										<h2>What's this all about?</h2>
-									</header>
-									<a href="#" class="image featured"><img src="images/pic10.jpg" alt="" /></a>
-									<p>
-										This is <strong>Dopetrope</strong> a free, fully responsive HTML5 site template by
-										<a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net/">HTML5 UP</a> It's released for free under
-										the <a href="http://html5up.net/license/">Creative Commons Attribution</a> license so feel free to use it for any personal or commercial project &ndash; just don't forget to credit us!
-									</p>
-									<footer>
-										<a href="#" class="button">Find out more</a>
-									</footer>
-								</section>
-							</div>
-						</div>
 						<div class="row">
 							<div class="4u 12u(mobile)">
 								<section>
@@ -331,32 +314,23 @@
 							<div class="4u 12u(mobile)">
 								<section>
 									<header>
-										<h2>Vitae tempor lorem</h2>
+										<h2>Posts</h2>
 									</header>
 									<ul class="social">
-										<li><a class="icon fa-facebook" href="#"><span class="label">Facebook</span></a></li>
 										<li><a class="icon fa-twitter" href="#"><span class="label">Twitter</span></a></li>
-										<li><a class="icon fa-dribbble" href="#"><span class="label">Dribbble</span></a></li>
-										<li><a class="icon fa-linkedin" href="#"><span class="label">LinkedIn</span></a></li>
-										<li><a class="icon fa-google-plus" href="#"><span class="label">Google+</span></a></li>
+										<li><a class="icon fa-facebook" href="#"><span class="label">Facebook</span></a></li>
+										<li><a class="icon fa-github" href="#"><span class="label">GitHub</span></a></li>
+
 									</ul>
 									<ul class="contact">
-										<li>
-											<h3>Address</h3>
-											<p>
-												Untitled Incorporated<br />
-												1234 Somewhere Road Suite<br />
-												Nashville, TN 00000-0000
-											</p>
-										</li>
 										<li>
 											<h3>Mail</h3>
 											<p><a href="#">someone@untitled.tld</a></p>
 										</li>
-										<li>
+										<!-- <li>
 											<h3>Phone</h3>
 											<p>(800) 000-0000</p>
-										</li>
+										</li> -->
 									</ul>
 								</section>
 							</div>
