Change: ボタンを設定

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Portfolio</title>
+		<title>Tomofumi MAKI</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -93,8 +93,9 @@
 								</div>
 								<footer>
 									<ul class="actions">
-										<li><a href="#" class="button big">Get Started</a></li>
-										<li><a href="#" class="button alt big">Learn More</a></li>
+										<li><a href="portfolio" class="button big">My Portfolio</a></li>
+										<li><a href="blog" class="button alt big">Blog</a></li>
+										<!-- <li><a href="#" class="button alt big">Publications</a></li> -->
 									</ul>
 								</footer>
 							</section>
@@ -109,7 +110,7 @@
 							<div class="12u">
 
 								<!-- Portfolio -->
-									<section>
+									<section id="portfolio">
 										<header class="major">
 											<h2>My Portfolio</h2>
 										</header>
@@ -197,7 +198,7 @@
 							<div class="12u">
 
 								<!-- Blog -->
-									<section>
+									<section id="blog">
 										<header class="major">
 											<h2>The Blog</h2>
 										</header>
