--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 								</div>
 								<footer>
 									<ul class="actions">
-										<li><a href="portfolio" class="button big">My Portfolio</a></li>
-										<li><a href="blog" class="button alt big">Blog</a></li>
+										<li><a href="#portfolio" class="button big">My Portfolio</a></li>
+										<li><a href="#blog" class="button alt big">Blog</a></li>
 										<!-- <li><a href="#" class="button alt big">Publications</a></li> -->
 									</ul>
 								</footer>
