--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 								<ul>
 									<li class="current"><a href="index.html">Home</a></li>
 									<li>
-										<a href="#">Dropdown</a>
+										<a href="#">Portfolio</a>
 										<ul>
 											<li><a href="#">Lorem ipsum dolor</a></li>
 											<li><a href="#">Magna phasellus</a></li>
@@ -46,9 +46,7 @@
 											<li><a href="#">Veroeros feugiat</a></li>
 										</ul>
 									</li>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="left-sidebar.html">Blog</a></li>
 								</ul>
 							</nav>
 
@@ -65,7 +63,7 @@
 								<div class="row">
 									<div class="4u 12u(mobile)">
 										<section class="first">
-											<i class="icon featured fa-cog"></i>
+											<i class="icon featured fa-android"></i>
 											<header>
 												<h2>Android</h2>
 											</header>
