Change: ディレクトリを整理

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<link rel="shortcut icon" href="favicon.ico">
+		<!-- タブに表示されるアイコンを紐づける -->
 	</head>
 	<body class="homepage">
 		<div id="page-wrapper">
@@ -72,7 +74,7 @@
 									</div>
 									<div class="4u 12u(mobile)">
 										<section class="middle">
-											<i class="icon featured alt fa-flash"></i>
+											<i class="icon featured alt fa-cogs"></i>
 											<header>
 												<h2>Embedded System</h2>
 											</header>
@@ -81,7 +83,7 @@
 									</div>
 									<div class="4u 12u(mobile)">
 										<section class="last">
-											<i class="icon featured alt2 fa-star"></i>
+											<i class="icon featured alt2 fa-eye"></i>
 											<header>
 												<h2>VR?</h2>
 											</header>
