Add: 最新投稿一覧のタイトルを追加

--- a/index.html
+++ b/index.html
@@ -249,6 +249,9 @@
 						<div class="row">
 							<div class="8u 12u(mobile)">
 								<section>
+									<header>
+										<h2>Posts</h2>
+									</header>
 									<ul class="dates">
 										<li>
 											<span class="date">Jan <strong>27</strong></span>
