Add: portfolioのページを新規作成

--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
 										<div class="row">
 											<div class="4u 12u(mobile)">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+													<a href="#" class="image featured"><img src="images/power_measurement.jpg" alt="" /></a>
 													<header>
-														<h3>Ipsum feugiat et dolor</h3>
+														<h3>Power measurement for mobile sensing</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+													<p>This is a system that enables power measurement of smartphone.</p>
 													<footer>
 														<a href="#" class="button alt">Find out more</a>
 													</footer>
@@ -309,7 +309,7 @@
 									<ul class="social">
 										<li><a class="icon fa-twitter" href="#"><span class="label">Twitter</span></a></li>
 										<li><a class="icon fa-facebook" href="#"><span class="label">Facebook</span></a></li>
-										<li><a class="icon fa-github" href="#"><span class="label">GitHub</span></a></li>
+										<li><a class="icon fa-github" href="https://github.com/tomofumi-maki"><span class="label">GitHub</span></a></li>
 
 									</ul>
 									<ul class="contact">
