--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
 										<div class="row">
 											<div class="4u 12u(mobile)">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/power_measurement.jpg" alt="" /></a>
+													<a href="#" class="image featured"><img src="images/power_measurement.JPG" alt="" /></a>
 													<header>
 														<h3>Power measurement for mobile sensing</h3>
 													</header>
 													<p>This is a system that enables power measurement of smartphone.</p>
 													<footer>
-														<a href="#" class="button alt">Find out more</a>
+														<a href="portfolio/power_measurement.html" class="button alt">Find out more</a>
 													</footer>
 												</section>
 											</div>
