--- a/index.html
+++ b/index.html
@@ -308,8 +308,8 @@
 								<section>
 									<ul class="social">
 										<li><a class="icon fa-twitter" href="#"><span class="label">Twitter</span></a></li>
-										<li><a class="icon fa-facebook" href="https://www.facebook.com/profile.php?id=100025044945996"><span class="label">Facebook</span></a></li>
-										<li><a class="icon fa-github" href="https://github.com/tomofumi-maki"><span class="label">GitHub</span></a></li>
+										<li><a class="icon fa-facebook" href="https://www.facebook.com/profile.php?id=100025044945996" target="_blank"><span class="label">Facebook</span></a></li>
+										<li><a class="icon fa-github" href="https://github.com/tomofumi-maki"><span class="label" target="_blank">GitHub</span></a></li>
 
 									</ul>
 									<ul class="contact">
@@ -331,7 +331,7 @@
 								<!-- Copyright -->
 									<div id="copyright">
 										<ul class="links">
-											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
 										</ul>
 									</div>
 
