Change: リンクを追加

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 													</header>
 													<p>This is a system that enables power measurement of smartphone.</p>
 													<footer>
-														<a href="#" class="button alt">Find out more</a>
+														<a href="portfolio/power_measurement.html" class="button alt">Find out more</a>
 													</footer>
 												</section>
 											</div>
