--- a/portfolio/power_measurement.html
+++ b/portfolio/power_measurement.html
@@ -63,7 +63,7 @@
 									<article class="box post">
 										<a href="#" class="image featured"><img src="../images/power_measurement.jpg" alt="" /></a>
 										<header>
-											<h2>Power measurement for mobile sensing</h2>
+											<h2>Power measurement <br> for mobile sensing</h2>
 											<p>This is a system that enables power measurement of smartphone.</p>
 										</header>
 										<p>
