--- a/index.html
+++ b/index.html
@@ -313,10 +313,10 @@
 
 									</ul>
 									<ul class="contact">
-										<!-- <li>
+										<li>
 											<h3>Mail</h3>
-											<p><a href="#">someone@untitled.tld</a></p>
-										</li> -->
+											<p>maki「ＡＴ」nagao.nuie.nagoya-u.ac.jp</p>
+										</li>
 										<!-- <li>
 											<h3>Phone</h3>
 											<p>(800) 000-0000</p>
