Change: デザインを修正

--- a/index.html
+++ b/index.html
@@ -76,18 +76,18 @@
 										<section class="middle">
 											<i class="icon featured alt fa-cogs"></i>
 											<header>
-												<h2>Embedded System</h2>
+												<h2>Firmware</h2>
 											</header>
 											<!--<p>Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p> -->
 										</section>
 									</div>
 									<div class="4u 12u(mobile)">
 										<section class="last">
-											<i class="icon featured alt2 fa-eye"></i>
+											<i class="icon featured fa-plane"></i>
 											<header>
-												<h2>VR?</h2>
+												<h2>Drone</h2>
 											</header>
-											<p>これから始めるかもしれん。</p>
+											<!--<p></p>-->
 										</section>
 									</div>
 								</div>
