--- a/portfolio/power_measurement.html
+++ b/portfolio/power_measurement.html
@@ -26,11 +26,11 @@
 						<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li class="current"><a href="index.html">Home</a></li>
-								<li>
+								<li><a href="index.html">Home</a></li>
+								<li class="current">
 									<a href="#">Portfolio</a>
 									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
+										<li><a href="#">Power measurement for mobile sensing</a></li>
 										<li><a href="#">Magna phasellus</a></li>
 										<li><a href="#">Etiam dolore nisl</a></li>
 										<li>
