--- a/portfolio/power_measurement.html
+++ b/portfolio/power_measurement.html
@@ -128,11 +128,11 @@
 									</section>
 									<section class="box">
 										<header>
-											<h3>Feugiat consequat</h3>
+											<h3>Portfolio</h3>
 										</header>
-										<p>Veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat sed lorem consequat feugiat lorem dolore.</p>
+										<p>A collection of works I made in the past</p>
 										<ul class="divided">
-											<li><a href="#">Sed et blandit consequat sed</a></li>
+											<li><a href="portfolio/power_measurement.html">Power measurement for mobile sensing</a></li>
 											<li><a href="#">Hendrerit tortor vitae sapien dolore</a></li>
 											<li><a href="#">Sapien id suscipit magna sed felis</a></li>
 											<li><a href="#">Aptent taciti sociosqu ad litora</a></li>
