--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 											<li><a href="#">Veroeros feugiat</a></li>
 										</ul>
 									</li>
-									<li><a href="blog/blog_design.php">Blog</a></li>
+									<li><a href="blog/blog_design.html">Blog</a></li>
 								</ul>
 							</nav>
 
