--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
 												<section class="box">
 													<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 													<header>
-														<h3>Sed etiam lorem nulla</h3>
+														<h3>Static obstacle detection from bird's-eye view image</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+													<p>Using the bird's-eye view image by drone, obstacles on the traveling route of personal mobility are detected in real time.</p>
 													<footer>
 														<a href="#" class="button alt">Find out more</a>
 													</footer>
@@ -143,7 +143,7 @@
 												<section class="box">
 													<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 													<header>
-														<h3>Consequat et tempus</h3>
+														<h3>Sed etiam lorem nulla</h3>
 													</header>
 													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
 													<footer>
