Add: add article title

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 								<ul>
 									<li class="current"><a href="index.html">Home</a></li>
 									<li>
-										<a href="#">Portfolio</a>
+										<a href="#">My Portfolio</a>
 										<ul>
-											<li><a href="#">Lorem ipsum dolor</a></li>
-											<li><a href="#">Magna phasellus</a></li>
-											<li><a href="#">Etiam dolore nisl</a></li>
+											<li><a href="#">Power measurement for mobile sensing</a></li>
+											<li><a href="#">Virtual youtuber system</a></li>
+											<li><a href="#">Securing personal mobility</a></li>
 											<li>
 												<a href="#">Phasellus consequat</a>
 												<ul>
@@ -48,6 +48,11 @@
 										</ul>
 									</li>
 									<li><a href="blog/blog_design.php">Blog</a></li>
+									<ul>
+										<li><a href="#">hoge</a></li>
+										<li><a href="#">huga</a></li>
+										<li><a href="#">blah</a></li>
+									</ul>
 								</ul>
 							</nav>
 
@@ -75,7 +80,7 @@
 										<section class="middle">
 											<i class="icon featured alt fa-cogs"></i>
 											<header>
-												<h2>Firmware</h2>
+												<h2>Image Recognition</h2>
 											</header>
 											<!--<p>Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p> -->
 										</section>
@@ -130,9 +135,9 @@
 												<section class="box">
 													<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 													<header>
-														<h3>Static obstacle detection from bird's-eye view image</h3>
+														<h3>Virtual youtuber system</h3>
 													</header>
-													<p>Using the bird's-eye view image by drone, obstacles on the traveling route of personal mobility are detected in real time.</p>
+													<p>The system for avatar used on live video.</p>
 													<footer>
 														<a href="#" class="button alt">Find out more</a>
 													</footer>
@@ -142,9 +147,9 @@
 												<section class="box">
 													<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 													<header>
-														<h3>Sed etiam lorem nulla</h3>
+														<h3>Securing personal mobility</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+													<p>Using the bird's-eye view image by drone, obstacles on the traveling route of personal mobility are detected in real time.</p>
 													<footer>
 														<a href="#" class="button alt">Find out more</a>
 													</footer>
