Delete: some sample text

--- a/index.html
+++ b/index.html
@@ -35,24 +35,16 @@
 											<li><a href="#">Power measurement for mobile sensing</a></li>
 											<li><a href="#">Virtual youtuber system</a></li>
 											<li><a href="#">Securing personal mobility</a></li>
-											<li>
-												<a href="#">Phasellus consequat</a>
-												<ul>
-													<li><a href="#">Magna phasellus</a></li>
-													<li><a href="#">Etiam dolore nisl</a></li>
-													<li><a href="#">Veroeros feugiat</a></li>
-													<li><a href="#">Nisl sed aliquam</a></li>
-												</ul>
-											</li>
-											<li><a href="#">Veroeros feugiat</a></li>
 										</ul>
 									</li>
-									<li><a href="blog/blog_design.php">Blog</a></li>
-									<ul>
-										<li><a href="#">hoge</a></li>
-										<li><a href="#">huga</a></li>
-										<li><a href="#">blah</a></li>
-									</ul>
+									<li>
+										<a href="blog/blog_design.php">Blog</a>
+										<ul>
+											<li><a href="#">hoge</a></li>
+											<li><a href="#">huga</a></li>
+											<li><a href="#">blah</a></li>
+										</ul>
+									</li>
 								</ul>
 							</nav>
 
