Change: mail address

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 									<ul class="contact">
 										<li>
 											<h3>Mail</h3>
-											<p>maki「ＡＴ」nagao.nuie.nagoya-u.ac.jp</p>
+											<p>maki.tomofumi「ＡＴ」e.mbox.nagoya-u.ac.jp</p>
 										</li>
 										<!-- <li>
 											<h3>Phone</h3>
