--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 										<div class="row">
 											<div class="4u 12u(mobile)">
 												<section class="box">
-													<a href="portfolio/power_measurement.html" class="image featured"><img src="images/power_measurement.JPG" alt="" /></a>
+													<a href="portfolio/power_measurement.html" class="image featured"><img src="images/power_measurement.jpg" alt="" /></a>
 													<header>
 														<h3>Power measurement for mobile sensing</h3>
 													</header>
