--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								<div class="row">
 									<div class="4u 12u(mobile)">
 										<section class="first">
-											<i class="icon featured fa-androi"></i>
+											<i class="icon featured fa-android"></i>
 											<header>
 												<h2>Android</h2>
 											</header>
