--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 									</div>
 									<div class="4u 12u(mobile)">
 										<section class="middle">
-											<i class="icon featured alt fa-cogs"></i>
+											<i class="icon featured alt fa-camera"></i>
 											<header>
 												<h2>Image Recognition</h2>
 											</header>
