--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
 										<div class="row">
 											<div class="4u 12u(mobile)">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+													<a href="#" class="image featured"><img src="images/drive.jpg" alt="" /></a>
 													<header>
-														<h3>Blandit sed adipiscing</h3>
+														<h3>Drive</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+													<p>Travel around Japan with the restored MR2.</p>
 													<footer>
 														<a href="#" class="button alt">Find out more</a>
 													</footer>
