--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!-- <link rel="shortcut icon" href="favicon.ico"> -->
+		<!-- faviconの指定 -->
+		<link rel="icon" type="image/x-icon" href="./favicon.ico">
+		<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon-180x180.png">
+		<!-- 使用するアイコンアセットの指定 -->
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-		<!-- タブに表示されるアイコンを紐づける -->
 	</head>
 	<body class="homepage">
 		<div id="page-wrapper">
