--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
 		<link rel="icon" type="image/x-icon" href="./favicon.ico">
 		<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon-180x180.png">
 		<!-- 使用するアイコンアセットの指定 -->
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+		<link
+			rel="stylesheet"
+			href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+			integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+			crossorigin="anonymous"
+		>
 	</head>
 	<body class="homepage">
 		<div id="page-wrapper">
@@ -116,7 +121,9 @@
 										<div class="row">
 											<div class="4u 12u(mobile)">
 												<section class="box">
-													<a href="portfolio/power_measurement.html" class="image featured"><img src="images/smart_phone_power_measurement.jpg" alt="" /></a>
+													<a href="portfolio/power_measurement.html" class="image featured">
+														<img src="images/smart_phone_power_measurement.jpg" alt="" />
+													</a>
 													<header>
 														<h3>Power measurement for mobile sensing</h3>
 													</header>
@@ -144,7 +151,9 @@
 													<header>
 														<h3>Securing personal mobility</h3>
 													</header>
-													<p>Using the bird's-eye view image by drone, obstacles on the traveling route of personal mobility are detected in real time.</p>
+													<p>Using the bird's-eye view image by drone, obstacles
+														on the traveling route of personal mobility are detected in real time.
+													</p>
 													<footer>
 														<a href="#" class="button alt">Find out more</a>
 													</footer>
@@ -306,9 +315,21 @@
 							<div class="4u 12u(mobile)">
 								<section>
 									<ul class="social">
-										<li><a class="icon fa-twitter" href="#"><span class="label">Twitter</span></a></li>
-										<li><a class="icon fa-facebook" href="https://www.facebook.com/profile.php?id=100025044945996" target="_blank"><span class="label">Facebook</span></a></li>
-										<li><a class="icon fa-github" href="https://github.com/tomofumi-maki"><span class="label" target="_blank">GitHub</span></a></li>
+										<li>
+											<a class="icon fa-twitter" href="#">
+												<span class="label">Twitter</span>
+											</a>
+										</li>
+										<li>
+											<a class="icon fa-facebook" href="https://www.facebook.com/profile.php?id=100025044945996" target="_blank">
+												<span class="label">Facebook</span>
+											</a>
+										</li>
+										<li>
+											<a class="icon fa-github" href="https://github.com/tomofumi-maki">
+												<span class="label" target="_blank">GitHub</span>
+											</a>
+										</li>
 
 									</ul>
 									<ul class="contact">
@@ -330,7 +351,8 @@
 								<!-- Copyright -->
 									<div id="copyright">
 										<ul class="links">
-											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
+											<li>&copy; Untitled. All rights reserved.</li>
+											<li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
 										</ul>
 									</div>
 
