--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!-- faviconの指定 -->
-		<link rel="icon" type="image/x-icon" href="favicon.ico">
-		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon-180x180.png">
+		<link rel="icon" type="image/x-icon" href="/favicon.ico">
+		<link rel="apple-touch-icon" type="image/png" href="/apple-touch-icon-180x180.png">
+		<link rel="icon" type="image/png" href="/icon-192x192.png">
 		<!-- 使用するアイコンアセットの指定 -->
 		<link
 			rel="stylesheet"
