--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 											</div>
 											<div class="4u 12u(mobile)">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+													<a href="#" class="image featured"><img src="images/drone.jpg" alt="" /></a>
 													<header>
 														<h3>Securing personal mobility</h3>
 													</header>
