--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 											</div>
 											<div class="4u 12u(mobile)">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+													<a href="#" class="image featured"><img src="images/vtuber.jpg" alt="" /></a>
 													<header>
 														<h3>Virtual youtuber system</h3>
 													</header>
