--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 													<header>
 														<h3>Virtual youtuber system</h3>
 													</header>
-													<p>The system for avatar used on live video.</p>
+													<p>The system for avatar used on live video. You can be "vtuber".</p>
 													<footer>
 														<a href="#" class="button alt">Find out more</a>
 													</footer>
