--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 													<header>
 														<h3>Virtual youtuber system</h3>
 													</header>
-													<p>The system for avatar used on live video. You can be "vtuber".</p>
+													<p>The system for avatar used on live video. You can be "Vtuber".</p>
 													<footer>
 														<a href="#" class="button alt">Find out more</a>
 													</footer>
@@ -168,7 +168,9 @@
 													<header>
 														<h3>Drive</h3>
 													</header>
-													<p>Travel around Japan with the restored MR2.</p>
+													<p>Travel around Japan with the restored MR2.
+														Gee whiz, he's very well although he is over 30 years old.
+													</p>
 													<footer>
 														<a href="#" class="button alt">Find out more</a>
 													</footer>
