--- a/index.html
+++ b/index.html
@@ -180,9 +180,11 @@
 												<section class="box">
 													<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
 													<header>
-														<h3>Etiam nisl consequat</h3>
+														<h3>Music</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+													<p>I'm devoted to music activities.
+														I have been playing in various situations.
+													</p>
 													<footer>
 														<a href="#" class="button alt">Find out more</a>
 													</footer>
