--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 											</div>
 											<div class="4u 12u(mobile)">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+													<a href="#" class="image featured"><img src="images/music.jpg" alt="" /></a>
 													<header>
 														<h3>Music</h3>
 													</header>
