--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 											<li><a href="#">Power measurement for mobile sensing</a></li>
 											<li><a href="#">Virtual youtuber system</a></li>
 											<li><a href="#">Securing personal mobility</a></li>
+											<li><a href="#">Drive</a></li>
+											<li><a href="#">Music</a></li>
 										</ul>
 									</li>
 									<li>
