--- a/portfolio/power_measurement.html
+++ b/portfolio/power_measurement.html
@@ -26,27 +26,25 @@
 						<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="index.html">Home</a></li>
-								<li class="current">
+								<li class="current"><a href="index.html">Home</a></li>
+								<li>
 									<a href="#">Portfolio</a>
 									<ul>
 										<li><a href="#">Power measurement for mobile sensing</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
-										<li>
-											<a href="#">Phasellus consequat</a>
-											<ul>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam dolore nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-												<li><a href="#">Nisl sed aliquam</a></li>
-												<li><a href="#">Dolore adipiscing</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
+										<li><a href="#">Virtual youtuber system</a></li>
+										<li><a href="#">Securing personal mobility</a></li>
+										<li><a href="#">Drive</a></li>
+										<li><a href="#">Music</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Blog</a></li>
+								<li>
+									<a href="blog/blog_design.php">Blog</a>
+									<ul>
+										<li><a href="#">hoge</a></li>
+										<li><a href="#">huga</a></li>
+										<li><a href="#">blah</a></li>
+									</ul>
+								</li>
 							</ul>
 						</nav>
 
