--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 								<ul>
 									<li class="current"><a href="index.html">Home</a></li>
 									<li>
-										<a href="#">My Portfolio</a>
+										<a href="#">Portfolio</a>
 										<ul>
 											<li><a href="#">Power measurement for mobile sensing</a></li>
 											<li><a href="#">Virtual youtuber system</a></li>
@@ -100,7 +100,7 @@
 								</div>
 								<footer>
 									<ul class="actions">
-										<li><a href="#portfolio" class="button big">My Portfolio</a></li>
+										<li><a href="#portfolio" class="button big">Portfolio</a></li>
 										<li><a href="#blog" class="button alt big">Blog</a></li>
 										<!-- <li><a href="#" class="button alt big">Publications</a></li> -->
 									</ul>
@@ -119,7 +119,7 @@
 								<!-- Portfolio -->
 									<section id="portfolio">
 										<header class="major">
-											<h2>My Portfolio</h2>
+											<h2>Portfolio</h2>
 										</header>
 										<div class="row">
 											<div class="4u 12u(mobile)">
