--- a/portfolio/power_measurement.html
+++ b/portfolio/power_measurement.html
@@ -61,7 +61,7 @@
 									<article class="box post">
 										<a href="#" class="image featured"><img src="../images/pic01.jpg" alt="" /></a>
 										<header>
-											<h2>Power measurement <br> for mobile sensing</h2>
+											<h2>Power measurement for mobile sensing</h2>
 											<p>This is a system that enables power measurement of smartphone.</p>
 										</header>
 										<p>
@@ -115,13 +115,13 @@
 
 								<!-- Sidebar -->
 									<section class="box">
-										<a href="#" class="image featured"><img src="../images/pic09.jpg" alt="" /></a>
+										<a href="portfolio/vtuber_system.html" class="image featured"><img src="../images/pic09.jpg" alt="" /></a>
 										<header>
-											<h3>Sed etiam lorem nulla</h3>
+											<h3>Virtual youtuber system</h3>
 										</header>
-										<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+										<p>The system for avatar used on live video. You can be "Vtuber".</p>
 										<footer>
-											<a href="#" class="button alt">Magna sed taciti</a>
+											<a href="portfolio/vtuber_system.html" class="button alt">Find out more</a>
 										</footer>
 									</section>
 									<section class="box">
@@ -131,12 +131,13 @@
 										<p>A collection of works I made in the past</p>
 										<ul class="divided">
 											<li><a href="portfolio/power_measurement.html">Power measurement for mobile sensing</a></li>
-											<li><a href="#">Hendrerit tortor vitae sapien dolore</a></li>
-											<li><a href="#">Sapien id suscipit magna sed felis</a></li>
-											<li><a href="#">Aptent taciti sociosqu ad litora</a></li>
+											<li><a href="portfolio/vtuber_system.html">Virtual youtuber system</a></li>
+											<li><a href="portfolio/drone.html">Securing personal mobility</a></li>
+											<li><a href="portfolio/drive.html">Drive</a></li>
+											<li><a href="portfolio/music.html">Music</a></li>
 										</ul>
 										<footer>
-											<a href="#" class="button alt">Ipsum consequat</a>
+											<a href="#" class="button alt">Find out more</a>
 										</footer>
 									</section>
 
