--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 								<ul>
 									<li class="current"><a href="index.html">Home</a></li>
 									<li>
-										<a href="#">Portfolio</a>
+										<a href="#portfolio">Portfolio</a>
 										<ul>
-											<li><a href="#">Power measurement for mobile sensing</a></li>
-											<li><a href="#">Virtual youtuber system</a></li>
-											<li><a href="#">Securing personal mobility</a></li>
-											<li><a href="#">Drive</a></li>
-											<li><a href="#">Music</a></li>
+											<li><a href="portfolio/power_measurement.html">Power measurement for mobile sensing</a></li>
+											<li><a href="portfolio/vtuber_system.html">Virtual youtuber system</a></li>
+											<li><a href="portfolio/drone.html">Securing personal mobility</a></li>
+											<li><a href="portfolio/drive.html">Drive</a></li>
+											<li><a href="portfolio/music.html">Music</a></li>
 										</ul>
 									</li>
 									<li>
@@ -138,19 +138,19 @@
 											</div>
 											<div class="4u 12u(mobile)">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/vtuber.jpg" alt="" /></a>
+													<a href="portfolio/vtuber_system.html" class="image featured"><img src="images/vtuber.jpg" alt="" /></a>
 													<header>
 														<h3>Virtual youtuber system</h3>
 													</header>
 													<p>The system for avatar used on live video. You can be "Vtuber".</p>
 													<footer>
-														<a href="#" class="button alt">Find out more</a>
+														<a href="portfolio/vtuber_system.html" class="button alt">Find out more</a>
 													</footer>
 												</section>
 											</div>
 											<div class="4u 12u(mobile)">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/drone.jpg" alt="" /></a>
+													<a href="portfolio/drone.html" class="image featured"><img src="images/drone.jpg" alt="" /></a>
 													<header>
 														<h3>Securing personal mobility</h3>
 													</header>
@@ -158,7 +158,7 @@
 														on the traveling route of personal mobility are detected in real time.
 													</p>
 													<footer>
-														<a href="#" class="button alt">Find out more</a>
+														<a href="portfolio/drone.html" class="button alt">Find out more</a>
 													</footer>
 												</section>
 											</div>
@@ -166,7 +166,7 @@
 										<div class="row">
 											<div class="4u 12u(mobile)">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/drive.jpg" alt="" /></a>
+													<a href="portfolio/drive.html" class="image featured"><img src="images/drive.jpg" alt="" /></a>
 													<header>
 														<h3>Drive</h3>
 													</header>
@@ -174,13 +174,13 @@
 														Gee whiz, he's very well although he is over 30 years old.
 													</p>
 													<footer>
-														<a href="#" class="button alt">Find out more</a>
+														<a href="portfolio/drive.html" class="button alt">Find out more</a>
 													</footer>
 												</section>
 											</div>
 											<div class="4u 12u(mobile)">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/music.jpg" alt="" /></a>
+													<a href="portfolio/music.html" class="image featured"><img src="images/music.jpg" alt="" /></a>
 													<header>
 														<h3>Music</h3>
 													</header>
@@ -188,7 +188,7 @@
 														I have been playing in various situations.
 													</p>
 													<footer>
-														<a href="#" class="button alt">Find out more</a>
+														<a href="portfolio/music.html" class="button alt">Find out more</a>
 													</footer>
 												</section>
 											</div>
