--- a/portfolio/power_measurement.html
+++ b/portfolio/power_measurement.html
@@ -30,11 +30,11 @@
 								<li>
 									<a href="#">Portfolio</a>
 									<ul>
-										<li><a href="#">Power measurement for mobile sensing</a></li>
-										<li><a href="#">Virtual youtuber system</a></li>
-										<li><a href="#">Securing personal mobility</a></li>
-										<li><a href="#">Drive</a></li>
-										<li><a href="#">Music</a></li>
+										<li><a href="portfolio/power_measurement.html">Power measurement for mobile sensing</a></li>
+										<li><a href="portfolio/vtuber_system.html">Virtual youtuber system</a></li>
+										<li><a href="portfolio/drone.html">Securing personal mobility</a></li>
+										<li><a href="portfolio/drive.html">Drive</a></li>
+										<li><a href="portfolio/music.html">Music</a></li>
 									</ul>
 								</li>
 								<li>
