--- a/portfolio/power_measurement.html
+++ b/portfolio/power_measurement.html
@@ -28,7 +28,7 @@
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Portfolio</a>
+									<a href="index.html#portfolio">Portfolio</a>
 									<ul>
 										<li><a href="portfolio/power_measurement.html">Power measurement for mobile sensing</a></li>
 										<li><a href="portfolio/vtuber_system.html">Virtual youtuber system</a></li>
