--- a/portfolio/power_measurement.html
+++ b/portfolio/power_measurement.html
@@ -26,7 +26,7 @@
 						<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li class="current"><a href="index.html">Home</a></li>
+								<li class="current"><a href="./index.html">Home</a></li>
 								<li>
 									<a href="index.html#portfolio">Portfolio</a>
 									<ul>
