--- a/portfolio/power_measurement.html
+++ b/portfolio/power_measurement.html
@@ -26,9 +26,9 @@
 						<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li class="current"><a href="./index.html">Home</a></li>
+								<li class="current"><a href="../index.html">Home</a></li>
 								<li>
-									<a href="./index.html#portfolio">Portfolio</a>
+									<a href="../index.html#portfolio">Portfolio</a>
 									<ul>
 										<li><a href="portfolio/power_measurement.html">Power measurement for mobile sensing</a></li>
 										<li><a href="portfolio/vtuber_system.html">Virtual youtuber system</a></li>
