--- a/portfolio/power_measurement.html
+++ b/portfolio/power_measurement.html
@@ -21,7 +21,7 @@
 					<div id="header">
 
 						<!-- Logo -->
-							<h1><a href="index.html">tomofumi-maki.github.io</a></h1>
+							<h1><a href="../index.html">tomofumi-maki.github.io</a></h1>
 
 						<!-- Nav -->
 						<nav id="nav">
@@ -137,7 +137,7 @@
 											<li><a href="portfolio/music.html">Music</a></li>
 										</ul>
 										<footer>
-											<a href="#" class="button alt">Find out more</a>
+											<a href="../index.html#portfolio" class="button alt">Find out more</a>
 										</footer>
 									</section>
 
