--- a/portfolio/power_measurement.html
+++ b/portfolio/power_measurement.html
@@ -130,11 +130,11 @@
 										</header>
 										<p>A collection of works I made in the past</p>
 										<ul class="divided">
-											<li><a href="portfolio/power_measurement.html">Power measurement for mobile sensing</a></li>
-											<li><a href="portfolio/vtuber_system.html">Virtual youtuber system</a></li>
-											<li><a href="portfolio/drone.html">Securing personal mobility</a></li>
-											<li><a href="portfolio/drive.html">Drive</a></li>
-											<li><a href="portfolio/music.html">Music</a></li>
+											<li><a href="power_measurement.html">Power measurement for mobile sensing</a></li>
+											<li><a href="vtuber_system.html">Virtual youtuber system</a></li>
+											<li><a href="drone.html">Securing personal mobility</a></li>
+											<li><a href="drive.html">Drive</a></li>
+											<li><a href="music.html">Music</a></li>
 										</ul>
 										<footer>
 											<a href="../index.html#portfolio" class="button alt">Find out more</a>
