--- a/portfolio/power_measurement.html
+++ b/portfolio/power_measurement.html
@@ -30,11 +30,11 @@
 								<li>
 									<a href="../index.html#portfolio">Portfolio</a>
 									<ul>
-										<li><a href="portfolio/power_measurement.html">Power measurement for mobile sensing</a></li>
-										<li><a href="portfolio/vtuber_system.html">Virtual youtuber system</a></li>
-										<li><a href="portfolio/drone.html">Securing personal mobility</a></li>
-										<li><a href="portfolio/drive.html">Drive</a></li>
-										<li><a href="portfolio/music.html">Music</a></li>
+										<li><a href="power_measurement.html">Power measurement for mobile sensing</a></li>
+										<li><a href="vtuber_system.html">Virtual youtuber system</a></li>
+										<li><a href="drone.html">Securing personal mobility</a></li>
+										<li><a href="drive.html">Drive</a></li>
+										<li><a href="music.html">Music</a></li>
 									</ul>
 								</li>
 								<li>
@@ -115,13 +115,13 @@
 
 								<!-- Sidebar -->
 									<section class="box">
-										<a href="portfolio/vtuber_system.html" class="image featured"><img src="../images/pic09.jpg" alt="" /></a>
+										<a href="vtuber_system.html" class="image featured"><img src="../images/pic09.jpg" alt="" /></a>
 										<header>
 											<h3>Virtual youtuber system</h3>
 										</header>
 										<p>The system for avatar used on live video. You can be "Vtuber".</p>
 										<footer>
-											<a href="portfolio/vtuber_system.html" class="button alt">Find out more</a>
+											<a href="vtuber_system.html" class="button alt">Find out more</a>
 										</footer>
 									</section>
 									<section class="box">
