--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 													</header>
 													<p>This is a system that enables power measurement of smartphone.</p>
 													<footer>
-														<a href="portfolio/power_measurement.html" class="button alt">Find out more</a>
+														<a href="portfolio/power_measurement.html" class="button alt">Learn more</a>
 													</footer>
 												</section>
 											</div>
@@ -144,7 +144,7 @@
 													</header>
 													<p>The system for avatar used on live video. You can be "Vtuber".</p>
 													<footer>
-														<a href="portfolio/vtuber_system.html" class="button alt">Find out more</a>
+														<a href="portfolio/vtuber_system.html" class="button alt">Learn more</a>
 													</footer>
 												</section>
 											</div>
@@ -158,7 +158,7 @@
 														on the traveling route of personal mobility are detected in real time.
 													</p>
 													<footer>
-														<a href="portfolio/drone.html" class="button alt">Find out more</a>
+														<a href="portfolio/drone.html" class="button alt">Learn more</a>
 													</footer>
 												</section>
 											</div>
@@ -174,7 +174,7 @@
 														Gee whiz, he's very well although he is over 30 years old.
 													</p>
 													<footer>
-														<a href="portfolio/drive.html" class="button alt">Find out more</a>
+														<a href="portfolio/drive.html" class="button alt">Learn more</a>
 													</footer>
 												</section>
 											</div>
@@ -188,7 +188,7 @@
 														I have been playing in various situations.
 													</p>
 													<footer>
-														<a href="portfolio/music.html" class="button alt">Find out more</a>
+														<a href="portfolio/music.html" class="button alt">Learn more</a>
 													</footer>
 												</section>
 											</div>
@@ -200,7 +200,7 @@
 													</header>
 													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
 													<footer>
-														<a href="#" class="button alt">Find out more</a>
+														<a href="#" class="button alt">Learn more</a>
 													</footer>
 												</section>
 											</div>
