--- a/portfolio/power_measurement.html
+++ b/portfolio/power_measurement.html
@@ -121,7 +121,7 @@
 										</header>
 										<p>The system for avatar used on live video. You can be "Vtuber".</p>
 										<footer>
-											<a href="vtuber_system.html" class="button alt">Find out more</a>
+											<a href="vtuber_system.html" class="button alt">Learn more</a>
 										</footer>
 									</section>
 									<section class="box">
@@ -137,7 +137,7 @@
 											<li><a href="music.html">Music</a></li>
 										</ul>
 										<footer>
-											<a href="../index.html#portfolio" class="button alt">Find out more</a>
+											<a href="../index.html#portfolio" class="button alt">Learn more</a>
 										</footer>
 									</section>
 
@@ -196,7 +196,7 @@
 										the <a href="http://html5up.net/license/">Creative Commons Attribution</a> license so feel free to use it for any personal or commercial project &ndash; just don't forget to credit us!
 									</p>
 									<footer>
-										<a href="#" class="button">Find out more</a>
+										<a href="#" class="button">Learn more</a>
 									</footer>
 								</section>
 							</div>
