--- a/index.html
+++ b/index.html
@@ -194,13 +194,14 @@
 											</div>
 											<div class="4u 12u(mobile)">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
+													<a href="portfolio/illust.html" class="image featured"><img src="images/illust.jpg" alt="" /></a>
 													<header>
-														<h3>Dolore nisl feugiat</h3>
+														<h3>Illustration</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+													<p>Since childhood, drawing has enriched my life.
+														I mainly draw sketches and Anime pictures.</p>
 													<footer>
-														<a href="#" class="button alt">Learn more</a>
+														<a href="portfolio/illust.html" class="button alt">Learn more</a>
 													</footer>
 												</section>
 											</div>
