--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 								<section>
 									<ul class="social">
 										<li>
-											<a class="icon fa-twitter" href="#">
+											<a class="icon fa-twitter" href="https://twitter.com/nco323">
 												<span class="label">Twitter</span>
 											</a>
 										</li>
