--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 											<li><a href="portfolio/drone.html">Securing personal mobility</a></li>
 											<li><a href="portfolio/drive.html">Drive</a></li>
 											<li><a href="portfolio/music.html">Music</a></li>
+											<li><a href="portfolio/illust.html">Illustration</a></li>
 										</ul>
 									</li>
 									<li>
