--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 										</ul>
 									</li>
 									<li>
-										<a href="blog/blog_design.php">Blog</a>
+										<a href="#blog">Blog</a>
 										<ul>
 											<li><a href="#">hoge</a></li>
 											<li><a href="#">huga</a></li>
