--- a/portfolio/power_measurement.html
+++ b/portfolio/power_measurement.html
@@ -35,10 +35,11 @@
 										<li><a href="drone.html">Securing personal mobility</a></li>
 										<li><a href="drive.html">Drive</a></li>
 										<li><a href="music.html">Music</a></li>
+										<li><a href="illust.html">Illustration</a></li>
 									</ul>
 								</li>
 								<li>
-									<a href="blog/blog_design.php">Blog</a>
+									<a href="../index.html#blog">Blog</a>
 									<ul>
 										<li><a href="#">hoge</a></li>
 										<li><a href="#">huga</a></li>
@@ -59,7 +60,7 @@
 
 								<!-- Content -->
 									<article class="box post">
-										<a href="#" class="image featured"><img src="../images/pic01.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="../images/smart_phone_power_measurement.jpg" alt="" /></a>
 										<header>
 											<h2>Power measurement for mobile sensing</h2>
 											<p>This is a system that enables power measurement of smartphone.</p>
@@ -119,7 +120,7 @@
 										<header>
 											<h3>Virtual youtuber system</h3>
 										</header>
-										<p>The system for avatar used on live video. You can be "Vtuber".</p>
+										<p>The system for avatar used on live video. You can become "Vtuber".</p>
 										<footer>
 											<a href="vtuber_system.html" class="button alt">Learn more</a>
 										</footer>
