--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 													<header>
 														<h3>Virtual youtuber system</h3>
 													</header>
-													<p>The system for avatar used on live video. You can be "Vtuber".</p>
+													<p>The system for avatar used on live video. You can become "Vtuber".</p>
 													<footer>
 														<a href="portfolio/vtuber_system.html" class="button alt">Learn more</a>
 													</footer>
