--- a/portfolio/power_measurement.html
+++ b/portfolio/power_measurement.html
@@ -116,7 +116,7 @@
 
 								<!-- Sidebar -->
 									<section class="box">
-										<a href="vtuber_system.html" class="image featured"><img src="../images/pic09.jpg" alt="" /></a>
+										<a href="vtuber_system.html" class="image featured"><img src="../images/vtuber.jpg" alt="" /></a>
 										<header>
 											<h3>Virtual youtuber system</h3>
 										</header>
@@ -136,6 +136,7 @@
 											<li><a href="drone.html">Securing personal mobility</a></li>
 											<li><a href="drive.html">Drive</a></li>
 											<li><a href="music.html">Music</a></li>
+											<li><a href="illust.html">Illustration</a></li>
 										</ul>
 										<footer>
 											<a href="../index.html#portfolio" class="button alt">Learn more</a>
@@ -147,150 +148,126 @@
 					</div>
 				</div>
 
-			<!-- Footer -->
-				<div id="footer-wrapper">
-					<section id="footer" class="container">
-						<div class="row">
-							<div class="8u 12u(mobile)">
-								<section>
-									<header>
-										<h2>Blandit nisl adipiscing</h2>
-									</header>
-									<ul class="dates">
-										<li>
-											<span class="date">Jan <strong>27</strong></span>
-											<h3><a href="#">Lorem dolor sit amet veroeros</a></h3>
-											<p>Ipsum dolor sit amet veroeros consequat blandit ipsum phasellus lorem consequat etiam.</p>
-										</li>
-										<li>
-											<span class="date">Jan <strong>23</strong></span>
-											<h3><a href="#">Ipsum sed blandit nisl consequat</a></h3>
-											<p>Blandit phasellus lorem ipsum dolor tempor sapien tortor hendrerit adipiscing feugiat lorem.</p>
-										</li>
-										<li>
-											<span class="date">Jan <strong>15</strong></span>
-											<h3><a href="#">Magna tempus lorem feugiat</a></h3>
-											<p>Dolore consequat sed phasellus lorem sed etiam nullam dolor etiam sed amet sit consequat.</p>
-										</li>
-										<li>
-											<span class="date">Jan <strong>12</strong></span>
-											<h3><a href="#">Dolore tempus ipsum feugiat nulla</a></h3>
-											<p>Feugiat lorem dolor sed nullam tempus lorem ipsum dolor sit amet nullam consequat.</p>
-										</li>
-										<li>
-											<span class="date">Jan <strong>10</strong></span>
-											<h3><a href="#">Blandit tempus aliquam?</a></h3>
-											<p>Feugiat sed tempus blandit tempus adipiscing nisl lorem ipsum dolor sit amet dolore.</p>
-										</li>
-									</ul>
-								</section>
-							</div>
-							<div class="4u 12u(mobile)">
-								<section>
-									<header>
-										<h2>What's this all about?</h2>
-									</header>
-									<a href="#" class="image featured"><img src="../images/pic10.jpg" alt="" /></a>
-									<p>
-										This is <strong>Dopetrope</strong> a free, fully responsive HTML5 site template by
-										<a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net/">HTML5 UP</a> It's released for free under
-										the <a href="http://html5up.net/license/">Creative Commons Attribution</a> license so feel free to use it for any personal or commercial project &ndash; just don't forget to credit us!
-									</p>
-									<footer>
-										<a href="#" class="button">Learn more</a>
-									</footer>
-								</section>
-							</div>
-						</div>
-						<div class="row">
-							<div class="4u 12u(mobile)">
-								<section>
-									<header>
-										<h2>Tempus consequat</h2>
-									</header>
-									<ul class="divided">
-										<li><a href="#">Lorem ipsum dolor sit amet sit veroeros</a></li>
-										<li><a href="#">Sed et blandit consequat sed tlorem blandit</a></li>
-										<li><a href="#">Adipiscing feugiat phasellus sed tempus</a></li>
-										<li><a href="#">Hendrerit tortor vitae mattis tempor sapien</a></li>
-										<li><a href="#">Sem feugiat sapien id suscipit magna felis nec</a></li>
-										<li><a href="#">Elit class aptent taciti sociosqu ad litora</a></li>
-									</ul>
-								</section>
-							</div>
-							<div class="4u 12u(mobile)">
-								<section>
-									<header>
-										<h2>Ipsum et phasellus</h2>
-									</header>
-									<ul class="divided">
-										<li><a href="#">Lorem ipsum dolor sit amet sit veroeros</a></li>
-										<li><a href="#">Sed et blandit consequat sed tlorem blandit</a></li>
-										<li><a href="#">Adipiscing feugiat phasellus sed tempus</a></li>
-										<li><a href="#">Hendrerit tortor vitae mattis tempor sapien</a></li>
-										<li><a href="#">Sem feugiat sapien id suscipit magna felis nec</a></li>
-										<li><a href="#">Elit class aptent taciti sociosqu ad litora</a></li>
-									</ul>
-								</section>
-							</div>
-							<div class="4u 12u(mobile)">
-								<section>
-									<header>
-										<h2>Vitae tempor lorem</h2>
-									</header>
-									<ul class="social">
-										<li><a class="icon fa-facebook" href="#"><span class="label">Facebook</span></a></li>
-										<li><a class="icon fa-twitter" href="#"><span class="label">Twitter</span></a></li>
-										<li><a class="icon fa-dribbble" href="#"><span class="label">Dribbble</span></a></li>
-										<li><a class="icon fa-linkedin" href="#"><span class="label">LinkedIn</span></a></li>
-										<li><a class="icon fa-google-plus" href="#"><span class="label">Google+</span></a></li>
-									</ul>
-									<ul class="contact">
-										<li>
-											<h3>Address</h3>
-											<p>
-												Untitled Incorporated<br />
-												1234 Somewhere Road Suite<br />
-												Nashville, TN 00000-0000
-											</p>
-										</li>
-										<li>
-											<h3>Mail</h3>
-											<p><a href="#">someone@untitled.tld</a></p>
-										</li>
-										<li>
-											<h3>Phone</h3>
-											<p>(800) 000-0000</p>
-										</li>
-									</ul>
-								</section>
-							</div>
-						</div>
-						<div class="row">
-							<div class="12u">
-
-								<!-- Copyright -->
-									<div id="copyright">
-										<ul class="links">
-											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				<!-- Footer -->
+					<div id="footer-wrapper">
+						<section id="footer" class="container">
+							<div class="row">
+								<div class="8u 12u(mobile)">
+									<section>
+										<header>
+											<h2>Posts</h2>
+										</header>
+										<ul class="dates">
+											<li>
+												<span class="date">Jan <strong>27</strong></span>
+												<h3><a href="#">Lorem dolor sit amet veroeros</a></h3>
+												<p>Ipsum dolor sit amet veroeros consequat blandit ipsum phasellus lorem consequat etiam.</p>
+											</li>
+											<li>
+												<span class="date">Jan <strong>23</strong></span>
+												<h3><a href="#">Ipsum sed blandit nisl consequat</a></h3>
+												<p>Blandit phasellus lorem ipsum dolor tempor sapien tortor hendrerit adipiscing feugiat lorem.</p>
+											</li>
+											<li>
+												<span class="date">Jan <strong>15</strong></span>
+												<h3><a href="#">Magna tempus lorem feugiat</a></h3>
+												<p>Dolore consequat sed phasellus lorem sed etiam nullam dolor etiam sed amet sit consequat.</p>
+											</li>
+											<li>
+												<span class="date">Jan <strong>12</strong></span>
+												<h3><a href="#">Dolore tempus ipsum feugiat nulla</a></h3>
+												<p>Feugiat lorem dolor sed nullam tempus lorem ipsum dolor sit amet nullam consequat.</p>
+											</li>
+											<li>
+												<span class="date">Jan <strong>10</strong></span>
+												<h3><a href="#">Blandit tempus aliquam?</a></h3>
+												<p>Feugiat sed tempus blandit tempus adipiscing nisl lorem ipsum dolor sit amet dolore.</p>
+											</li>
 										</ul>
-									</div>
+									</section>
+								</div>
+							<div class="row">
+								<div class="4u 12u(mobile)">
+									<section>
+										<header>
+											<h2>Tempus consequat</h2>
+										</header>
+										<ul class="divided">
+											<li><a href="#">Lorem ipsum dolor sit amet sit veroeros</a></li>
+											<li><a href="#">Sed et blandit consequat sed tlorem blandit</a></li>
+										</ul>
+									</section>
+								</div>
+								<div class="4u 12u(mobile)">
+									<section>
+										<header>
+											<h2>Ipsum et phasellus</h2>
+										</header>
+										<ul class="divided">
+											<li><a href="#">Lorem ipsum dolor sit amet sit veroeros</a></li>
+											<li><a href="#">Sed et blandit consequat sed tlorem blandit</a></li>
+										</ul>
+									</section>
+								</div>
+								<div class="4u 12u(mobile)">
+									<section>
+										<ul class="social">
+											<li>
+												<a class="icon fa-twitter" href="https://twitter.com/nco323">
+													<span class="label">Twitter</span>
+												</a>
+											</li>
+											<li>
+												<a class="icon fa-facebook" href="https://www.facebook.com/profile.php?id=100025044945996" target="_blank">
+													<span class="label">Facebook</span>
+												</a>
+											</li>
+											<li>
+												<a class="icon fa-github" href="https://github.com/tomofumi-maki">
+													<span class="label" target="_blank">GitHub</span>
+												</a>
+											</li>
 
+										</ul>
+										<ul class="contact">
+											<li>
+												<h3>Mail</h3>
+												<p>maki.tomofumi「ＡＴ」e.mbox.nagoya-u.ac.jp</p>
+											</li>
+											<!-- <li>
+												<h3>Phone</h3>
+												<p>(800) 000-0000</p>
+											</li> -->
+										</ul>
+									</section>
+								</div>
 							</div>
-						</div>
-					</section>
-				</div>
+							<div class="row">
+								<div class="12u">
 
-		</div>
+									<!-- Copyright -->
+										<div id="copyright">
+											<ul class="links">
+												<li>&copy; Untitled. All rights reserved.</li>
+												<li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
+											</ul>
+										</div>
 
-		<!-- Scripts -->
-			<script src="../assets/js/jquery.min.js"></script>
-			<script src="../assets/js/jquery.dropotron.min.js"></script>
-			<script src="../assets/js/skel.min.js"></script>
-			<script src="../assets/js/skel-viewport.min.js"></script>
-			<script src="../assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="../assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="../assets/js/main.js"></script>
+								</div>
+							</div>
+						</section>
+					</div>
 
-	</body>
-</html>
+			</div>
+
+			<!-- Scripts -->
+				<script src="assets/js/jquery.min.js"></script>
+				<script src="assets/js/jquery.dropotron.min.js"></script>
+				<script src="assets/js/skel.min.js"></script>
+				<script src="assets/js/skel-viewport.min.js"></script>
+				<script src="assets/js/util.js"></script>
+				<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+				<script src="assets/js/main.js"></script>
+
+		</body>
+	</html>
