--- a/portfolio/vtuber_system.html
+++ b/portfolio/vtuber_system.html
@@ -62,8 +62,8 @@
 									<article class="box post">
 										<a href="#" class="image featured"><img src="../images/vtuber.jpg" alt="" /></a>
 										<header>
-											<h2>Power measurement for mobile sensing</h2>
-											<p>This is a system that enables power measurement of smartphone.</p>
+											<h2>Virtual youtuber system</h2>
+											<p>The system for avatar used on live video. You can become "Vtuber".</p>
 										</header>
 										<p>
 											Vestibulum scelerisque ultricies libero id hendrerit. Vivamus malesuada quam faucibus ante dignissim auctor
@@ -116,11 +116,11 @@
 
 								<!-- Sidebar -->
 									<section class="box">
-										<a href="vtuber_system.html" class="image featured"><img src="../images/drone.jpg" alt="" /></a>
+										<a href="drone.html" class="image featured"><img src="../images/drone.jpg" alt="" /></a>
 										<header>
-											<h3>Virtual youtuber system</h3>
+											<h3>Securing personal mobility</h3>
 										</header>
-										<p>The system for avatar used on live video. You can become "Vtuber".</p>
+										<p>Using the bird's-eye view image by drone, obstacles on the traveling route of personal mobility are detected in real time.</p>
 										<footer>
 											<a href="vtuber_system.html" class="button alt">Learn more</a>
 										</footer>
