--- a/portfolio/drive.html
+++ b/portfolio/drive.html
@@ -62,8 +62,9 @@
 									<article class="box post">
 										<a href="#" class="image featured"><img src="../images/drive.jpg" alt="" /></a>
 										<header>
-											<h2>Power measurement for mobile sensing</h2>
-											<p>This is a system that enables power measurement of smartphone.</p>
+											<h2>Drive</h2>
+											<p>Travel around Japan with the restored MR2.
+												Gee whiz, he's very well although he is over 30 years old.</p>
 										</header>
 										<p>
 											Vestibulum scelerisque ultricies libero id hendrerit. Vivamus malesuada quam faucibus ante dignissim auctor
@@ -116,13 +117,13 @@
 
 								<!-- Sidebar -->
 									<section class="box">
-										<a href="vtuber_system.html" class="image featured"><img src="../images/music.jpg" alt="" /></a>
+										<a href="music.html" class="image featured"><img src="../images/music.jpg" alt="" /></a>
 										<header>
-											<h3>Virtual youtuber system</h3>
+											<h3>Music</h3>
 										</header>
-										<p>The system for avatar used on live video. You can become "Vtuber".</p>
+										<p>I'm devoted to music activities.</p>
 										<footer>
-											<a href="vtuber_system.html" class="button alt">Learn more</a>
+											<a href="music.html" class="button alt">Learn more</a>
 										</footer>
 									</section>
 									<section class="box">
