--- a/portfolio/drone.html
+++ b/portfolio/drone.html
@@ -62,8 +62,8 @@
 									<article class="box post">
 										<a href="#" class="image featured"><img src="../images/drone.jpg" alt="" /></a>
 										<header>
-											<h2>Power measurement for mobile sensing</h2>
-											<p>This is a system that enables power measurement of smartphone.</p>
+											<h2>Securing personal mobility</h2>
+											<p>Using the bird's-eye view image by drone, obstacles on the traveling route of personal mobility are detected in real time.</p>
 										</header>
 										<p>
 											Vestibulum scelerisque ultricies libero id hendrerit. Vivamus malesuada quam faucibus ante dignissim auctor
@@ -116,13 +116,13 @@
 
 								<!-- Sidebar -->
 									<section class="box">
-										<a href="vtuber_system.html" class="image featured"><img src="../images/drive.jpg" alt="" /></a>
+										<a href="drive.html" class="image featured"><img src="../images/drive.jpg" alt="" /></a>
 										<header>
-											<h3>Virtual youtuber system</h3>
+											<h3>Drive</h3>
 										</header>
-										<p>The system for avatar used on live video. You can become "Vtuber".</p>
+										<p>Travel around Japan with the restored MR2.</p>
 										<footer>
-											<a href="vtuber_system.html" class="button alt">Learn more</a>
+											<a href="drive.html" class="button alt">Learn more</a>
 										</footer>
 									</section>
 									<section class="box">
