--- a/portfolio/illust.html
+++ b/portfolio/illust.html
@@ -62,8 +62,9 @@
 									<article class="box post">
 										<a href="#" class="image featured"><img src="../images/illust.jpg" alt="" /></a>
 										<header>
-											<h2>Power measurement for mobile sensing</h2>
-											<p>This is a system that enables power measurement of smartphone.</p>
+											<h2>Illustration</h2>
+											<p>Since childhood, drawing has enriched my life.
+												I mainly draw sketches and Anime pictures.</p>
 										</header>
 										<p>
 											Vestibulum scelerisque ultricies libero id hendrerit. Vivamus malesuada quam faucibus ante dignissim auctor
@@ -118,11 +119,11 @@
 									<section class="box">
 										<a href="vtuber_system.html" class="image featured"><img src="../images/smart_phone_power_measurement.jpg" alt="" /></a>
 										<header>
-											<h3>Virtual youtuber system</h3>
+											<h3>Power measurement for mobile sensing</h3>
 										</header>
-										<p>The system for avatar used on live video. You can become "Vtuber".</p>
+										<p>This is a system that enables power measurement of smartphone.</p>
 										<footer>
-											<a href="vtuber_system.html" class="button alt">Learn more</a>
+											<a href="power_measurement.html" class="button alt">Learn more</a>
 										</footer>
 									</section>
 									<section class="box">
