--- a/portfolio/music.html
+++ b/portfolio/music.html
@@ -62,8 +62,9 @@
 									<article class="box post">
 										<a href="#" class="image featured"><img src="../images/music.jpg" alt="" /></a>
 										<header>
-											<h2>Power measurement for mobile sensing</h2>
-											<p>This is a system that enables power measurement of smartphone.</p>
+											<h2>Music</h2>
+											<p>I'm devoted to music activities.
+												I have been playing in various situations.</p>
 										</header>
 										<p>
 											Vestibulum scelerisque ultricies libero id hendrerit. Vivamus malesuada quam faucibus ante dignissim auctor
@@ -116,13 +117,13 @@
 
 								<!-- Sidebar -->
 									<section class="box">
-										<a href="vtuber_system.html" class="image featured"><img src="../images/illust.jpg" alt="" /></a>
+										<a href="illust.html" class="image featured"><img src="../images/illust.jpg" alt="" /></a>
 										<header>
-											<h3>Virtual youtuber system</h3>
+											<h3>Illustration</h3>
 										</header>
-										<p>The system for avatar used on live video. You can become "Vtuber".</p>
+										<p>Since childhood, drawing has enriched my life.</p>
 										<footer>
-											<a href="vtuber_system.html" class="button alt">Learn more</a>
+											<a href="illust.html" class="button alt">Learn more</a>
 										</footer>
 									</section>
 									<section class="box">
