--- a/portfolio/power_measurement.html
+++ b/portfolio/power_measurement.html
@@ -120,7 +120,7 @@
 										<header>
 											<h3>Virtual youtuber system</h3>
 										</header>
-										<p>The system for avatar used on live video. You can become "Vtuber".</p>
+										<p>The system for avatar used on live video.</p>
 										<footer>
 											<a href="vtuber_system.html" class="button alt">Learn more</a>
 										</footer>
