--- a/portfolio/vtuber_system.html
+++ b/portfolio/vtuber_system.html
@@ -122,7 +122,7 @@
 										</header>
 										<p>Using the bird's-eye view image by drone, obstacles on the traveling route of personal mobility are detected in real time.</p>
 										<footer>
-											<a href="vtuber_system.html" class="button alt">Learn more</a>
+											<a href="drone.html" class="button alt">Learn more</a>
 										</footer>
 									</section>
 									<section class="box">
