--- a/portfolio/illust.html
+++ b/portfolio/illust.html
@@ -117,7 +117,7 @@
 
 								<!-- Sidebar -->
 									<section class="box">
-										<a href="vtuber_system.html" class="image featured"><img src="../images/smart_phone_power_measurement.jpg" alt="" /></a>
+										<a href="power_measurement.html" class="image featured"><img src="../images/smart_phone_power_measurement.jpg" alt="" /></a>
 										<header>
 											<h3>Power measurement for mobile sensing</h3>
 										</header>
