--- a/index.html
+++ b/index.html
@@ -380,7 +380,9 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
-			<script src="assets/js/smooth-scroll.polyfills.min.js"></script>
+			<script src="assets/js/smooth-scroll.polyfills.min.js">
+				var scroll = new SmoothScroll('a[href*="#"]');
+			</script>
 
 	</body>
 </html>
